# SmartChatIFlytek

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SmartTalkRobot.sln  SmartTalkRobot.vcxproj  SmartTalkRobot.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  demo.vcxproj  demo.vcxproj.filters
Release/: SmartTalkRobot.exp  SmartTalkRobot.lib
Release/files/ilog_v1/: 1710661828442
Release/files/logan_cache/: logan.mmap2
Release/msc/41e3f08306000a707ca8694bf961cdf7/: u.data  urec.data
Release/msc/res/ivw/: wakeupresource.jet
SmartTalkRobot/: Encoding.cpp  Encoding.h  audiocontroler.cpp  audiocontroler.h  pch.h  timetool.hpp  utils.hpp  vocieai-vcs-api.cpp
SmartTalkRobot.dir/Release/: SmartTalkRobot.dll.recipe
SmartTalkRobot.dir/Release/SmartTalkRobot.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  SmartTalkRobot.lastbuildstate  SmartTalkRobot.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SmartTalkRobot/rtaudio/: rtaudio.cpp
SmartTalkRobot/spark/: sc_error.h  sparkchain.h
SmartTalkRobot/spark/lib/: SparkChain.lib
demo.dir/Release/: demo.exe.recipe
demo.dir/Release/demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
example/: demo.cpp
files/ilog_v1/: 1710661716950
files/logan_cache/: logan.mmap2
include/: spark-api.h  vocieai-vcs-api.h
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
